--- a/source/scss/blocks/main-nav.scss
+++ b/source/scss/blocks/main-nav.scss
@@ -1,9 +1,9 @@
 .main-nav {
-  font-family: 'Yanone Kaffeesatz', sans-serif;;
-  font-weight: 400;
-  text-transform: uppercase;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 18px;
+  font-weight: 400;
   line-height: 18px;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -20,22 +20,22 @@
   position: absolute;
   top: -17px;
   right: -20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-sizing: content-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 20px;
   height: 20px;
   padding: 20px;
-  background-color: inherit;
-  border: none;
-  user-select: none;
   margin: 0;
-  border-radius: 0;
   font-size: 0;
   line-height: 0;
-  outline: none;
   cursor: pointer;
+  user-select: none;
+  background-color: inherit;
+  border: none;
+  border-radius: 0;
+  outline: none;
 
   @media (min-width: $tablet-width) {
     display: none;
@@ -54,20 +54,20 @@
 
 .main-nav__close-btn::after,
 .main-nav__close-btn::before {
-  content: '';
   position: absolute;
   left: 0;
   width: 100%;
   height: 2px;
-  background:  $grey;
-  transform-origin: 50% 50%;
+  content: '';
+  background: $grey;
   transition: top 0.5s 0.5s, transform 0.5s;
+  transform-origin: 50% 50%;
 }
 
 .main-nav__close-btn::after {
   top: -6px;
 }
-  
+
 .main-nav__close-btn::before {
   top: 6px;
 }
@@ -79,8 +79,8 @@
 .main-nav__opened .main-nav__close-btn::after,
 .main-nav__opened .main-nav__close-btn::before {
   top: 0;
-  transition: top 0.3s, transform 0.3s 0.5s;
   width: 20px;
+  transition: top 0.3s, transform 0.3s 0.5s;
 }
 
 .main-nav__opened .main-nav__close-btn::after {
@@ -90,17 +90,6 @@
 .main-nav__opened .main-nav__close-btn {
   background: 0 0;
   transition: background 0.01s 0.01s;
-}
-
-.main-nav__nojs .main-nav__list,
-.main-nav__opened .main-nav__list {
-  display: block;
-  margin: 0;
-  text-align: center;
-}
-
-.main-nav__nojs .main-nav__toggle {
-  display: none;
 }
 
 .main-nav__list {
@@ -113,28 +102,45 @@
   }
 }
 
+.main-nav__nojs .main-nav__list,
+.main-nav__opened .main-nav__list {
+  display: block;
+  margin: 0;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.main-nav__nojs .main-nav__toggle {
+  display: none;
+}
+
 .main-nav__list--about {
   @media (min-width: $tablet-width) {
-    order: 0;
     flex-grow: 1;
+    order: 0;
   }
 }
 
 .main-nav__wrapper {
+  position: relative;
   margin: 23px 0;
   text-align: center;
-  position: relative;
 
   @media (min-width: $tablet-width) {
-    order: 1;
     flex-grow: 2;
+    order: 1;
   }
 }
 
 .main-nav__list--user {
   @media (min-width: $tablet-width) {
-    order: 2;
     flex-grow: 1;
+    order: 2;
   }
 }
 
@@ -163,25 +169,25 @@
 
 .main-nav__btn {
   position: relative;
+  padding: 9px 40px 7px 10px;
   font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
   font-size: 18px;
+  font-weight: 400;
   color: white;
+  text-transform: uppercase;
   background-color: $orange;
   border: none;
-  padding: 9px 40px 7px 10px;
   transition: 0.3s all;
 
   &::after {
+    position: absolute;
+    top: 7px;
+    right: 9px;
+    width: 15px;
+    height: 20px;
     content: '';
     background-image: url('../img/icon-arrow-down.svg');
     background-repeat: no-repeat;
-    position: absolute;
-    width: 15px;
-    height: 20px;
-    top: 7px;
-    right: 9px;
   }
 
   &:hover,
@@ -211,14 +217,14 @@
 
 .main-nav__icon--search {
   @media (min-width: $desktop-width) {
-    width: 21px; 
+    width: 21px;
     height: 21px;
   }
 }
 
 .main-nav__icon--basket {
   @media (min-width: $desktop-width) {
-    width: 25px; 
+    width: 25px;
     height: 25px;
   }
 }
