--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -10,9 +10,9 @@
 
 .slider__list {
   display: flex;
+  width: max-content;
   margin: 0;
   transition: 0.5s all;
-  width: max-content;
 }
 
 .slider__pic {
@@ -29,18 +29,18 @@
   position: absolute;
   top: 0;
   right: 0;
-  left: 0;
   bottom: 0;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.9),  rgba(0, 0, 0, 0));
+  left: 0;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
 }
 
 .slider__controls {
   position: absolute;
-  width: 100%;
-  left: 0;
   top: 40%;
+  left: 0;
   display: flex;
   justify-content: space-between;
+  width: 100%;
   padding: 0 20px;
 
   @media (min-width: $tablet-width) {
@@ -52,10 +52,10 @@
 .slider__next {
   width: 30px;
   height: 30px;
-  border-radius: 50%;
-  border: 2px solid $grey;
-  background-color: $light-grey;
   padding: 0;
+  background-color: $light-grey;
+  border: 2px solid $grey;
+  border-radius: 50%;
 
   &:focus,
   &:hover {
@@ -78,25 +78,25 @@
 
 .slider__inner {
   position: absolute;
-  max-width: 260px;
-  width: 60%;
   bottom: 15%;
   left: 20%;
-  color: white;
-  font-family: 'Yanone Kaffeesatz', sans-serif;;
-  font-weight: 700;
+  width: 60%;
+  max-width: 260px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 20px;
+  font-weight: 700;
+  color: white;
 
   @media (min-width: $tablet-width) {
-    font-size: 42px;
     max-width: 480px;
+    font-size: 42px;
   }
 
   @media (min-width: $desktop-width) {
+    left: 18%;
+    max-width: 540px;
     font-size: 48px;
     line-height: 58px;
-    max-width: 540px;
-    left: 18%;
   }
 }
 
@@ -105,15 +105,15 @@
 }
 
 .slider__btn {
+  padding: 7px 20px 5px;
   font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
   font-size: 15px;
+  font-weight: 400;
   line-height: 15px;
   color: white;
+  text-transform: uppercase;
   background-color: $orange;
   border: 2px solid white;
-  padding: 7px 20px 5px;
   transition: 0.3s all;
 
   &:hover,
@@ -131,10 +131,10 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding: 11px 55px;
+    margin-top: 21px;
     font-size: 18px;
     line-height: 18px;
-    padding: 11px 55px;
     border: 4px solid white;
-    margin-top: 21px;
   }
 }
