--- a/source/scss/common.scss
+++ b/source/scss/common.scss
@@ -3,9 +3,10 @@
 }
 
 body {
-  margin: 0;
+  min-width: 320px;
+  max-width: 1700px;
   padding: 0;
-
+  margin: 0 auto;
   font-family: $secondary-font;
 }
 
@@ -15,18 +16,18 @@ input[type='radio'].visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
-  margin: -1px;
-  border: 0;
   padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
+  margin: -1px;
   overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  white-space: nowrap;
+  border: 0;
 }
 
 header {
-  margin: 0;
   padding: 0 20px;
+  margin: 0;
 }
 
 a {
@@ -35,8 +36,8 @@ a {
 }
 
 ul {
-  list-style: none;
   padding: 0;
+  list-style: none;
 }
 
 img {
